--- a/public/library.html
+++ b/public/library.html
@@ -6,16 +6,22 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <h1>Remx</h1>
-    <div style="display: flex; gap: 1rem; align-items: center; flex-wrap: wrap;">
-      <input type="text" id="search" placeholder="Rechercher une musique...">
-      <select id="sortSelect">
-        <option value="alpha">Trier A-Z</option>
-        <option value="recent">Trier par date</option>
-      </select>
-    </div>
-  </header>
+  
+ <header style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap;">
+  <h1>Remx</h1>
+
+  <!-- Bouton upload en haut à droite -->
+  <a href="upload.html" class="cta-button small">➕ Uploader</a>
+
+  <!-- Barre recherche + tri alignés horizontalement -->
+  <div style="display: flex; gap: 1rem; flex-wrap: wrap; width: 100%; margin-top: 1rem;">
+    <input type="text" id="search" placeholder="Rechercher une musique..." />
+    <select id="sortSelect">
+      <option value="alpha">Trier A-Z</option>
+      <option value="recent">Trier par date</option>
+    </select>
+  </div>
+</header>
 
   <main>
     <section id="music-list">
