--- a/public/upload.html
+++ b/public/upload.html
@@ -82,7 +82,6 @@
     </form>
   </main>
 
-  <!-- Supabase JS -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script>
     const supabase = supabase.createClient(
@@ -91,9 +90,9 @@
     );
 
     async function handleUpload(event) {
-      event.preventDefault(); // empêcher le rechargement de page
+      event.preventDefault();
 
-      const title = document.getElementById('title').value;
+      const title = document.getElementById('title').value.trim();
       const audioFile = document.getElementById('file').files[0];
       const coverFile = document.getElementById('cover').files[0];
 
@@ -102,20 +101,21 @@
         return;
       }
 
-      // Upload audio
+      const mp3Path = `uploads/${title}.mp3`;
+      const coverPath = `uploads/${title}.jpg`;
+
       const { data: audioData, error: audioError } = await supabase
         .storage.from('musics')
-        .upload(`uploads/${audioFile.name}`, audioFile, { upsert: true });
+        .upload(mp3Path, audioFile, { upsert: true });
 
-      // Upload cover
       const { data: coverData, error: coverError } = await supabase
         .storage.from('musics')
-        .upload(`covers/${coverFile.name}`, coverFile, { upsert: true });
+        .upload(coverPath, coverFile, { upsert: true });
 
       if (audioError || coverError) {
         alert("Erreur upload : " + (audioError?.message || coverError?.message));
       } else {
-        alert(`Upload réussi ! 🎉\nTitre : ${title}\nAudio : ${audioData.path}\nCover : ${coverData.path}`);
+        alert(`✅ Upload réussi !\nTitre : ${title}\nAudio : ${mp3Path}\nCover : ${coverPath}`);
       }
     }
   </script>
