--- a/public/upload.html
+++ b/public/upload.html
@@ -87,8 +87,8 @@
   <script>
     const { createClient } = supabase;
     const supabaseClient = createClient(
-      'https://TON_URL_SUPABASE.supabase.co',   // 🔁 remplace par ton URL Supabase
-      'TON_ANON_KEY'                            // 🔁 remplace par ta clé anonyme
+      'https://abiiqzhgfntisjihwprp.supabase.co',   // 🔁 remplace par ton URL Supabase
+      'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImFiaWlxemhnZm50aXNqaWh3cHJwIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDkzNzc3MjksImV4cCI6MjA2NDk1MzcyOX0.dJAcl6edgiC9JsBP8MJ0QfkvAljCK8nVoKV75VNlL28'                            // 🔁 remplace par ta clé anonyme
     );
 
     async function handleUpload(event) {
