--- a/public/library.html
+++ b/public/library.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <title>Remx - Bibliothèque</title>
   <link rel="stylesheet" href="style.css">
-  <!-- ✅ Ajout de Supabase -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <!-- ✅ Charger Supabase JS v2 -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
   
